# libcsmerge

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
demo/include/: Demo.hpp  Glyphs.hpp
demo/src/: Demo.cpp
libcsmerge/: CMakeLists.txt
libcsmerge/include/: Charstrings.hpp  CsMerge.hpp  Exception.hpp  Geometry.hpp  Types.hpp  Util.hpp
libcsmerge/src/: Charstrings.cpp  Geometry.cpp
pycsmerge/: .gitignore  CMakeLists.txt  Pycsmerge.cpp  __init__.py  setup.py
test/: CMakeLists.txt
test/python/: test.py
test/src/: Charstring_test.cpp  Geometry_test.cpp
